queries created, chart service methods modified